--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,19 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+h1 {
+  @apply font-bold text-3xl text-gray-900;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+h2 {
+  @apply text-2xl text-gray-900;
 }
 
-* {
-  box-sizing: border-box;
+button.primary {
+  @apply bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded;
+}
+
+button.secondary {
+  @apply bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded;
 }
