--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,10 +18,11 @@ button.secondary {
   @apply bg-gray-500 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded;
 }
 
-.recorder > div {
-  width: 500px;
+nav {
+  height: 10vh;
 }
 
-audio {
-  height: 35px;
+main {
+  max-height: 90vh;
+  overflow-y: auto;
 }
