--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,12 @@ h1 {
 h2 {
   @apply text-2xl text-gray-900;
 }
+h3 {
+  @apply text-xl text-gray-900;
+}
+h4 {
+  @apply text-lg text-gray-900;
+}
 
 button.primary {
   @apply bg-indigo-500 hover:bg-indigo-700 text-white font-bold py-2 px-4 rounded disabled:bg-gray-500 disabled:cursor-not-allowed;
@@ -51,4 +57,15 @@ label {
 
 aside {
   @apply text-white;
+}
+
+a.external {
+  @apply text-blue-500;
+}
+a.external:visited {
+  @apply text-purple-700;
+}
+
+.card {
+  @apply flex flex-col gap-2 items-center shadow-md bg-gray-50 p-4 rounded-lg;
 }
