--- a/styles/globals.css
+++ b/styles/globals.css
@@ -67,5 +67,5 @@ a.external:visited {
 }
 
 .card {
-  @apply flex flex-col items-center gap-2 rounded-lg bg-gray-50 p-4 shadow-md;
+  @apply flex flex-col items-center gap-2 rounded-lg bg-white p-4 shadow-md;
 }
