--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,11 @@ button.primary {
 }
 
 button.secondary {
-  @apply rounded bg-gray-500 py-2 px-4 font-bold text-white hover:bg-gray-700;
+  @apply rounded border-2 border-gray-300 bg-white py-2 px-4 font-bold text-indigo-500  hover:bg-gray-50;
+}
+
+button.danger {
+  @apply rounded border-2 border-gray-300 bg-red-500 py-2 px-4 font-bold text-white  hover:bg-red-700;
 }
 
 nav {
